# albatross-explorer

./: .gitignore  Cargo.toml  LICENSE.md
migrations/2019-10-28-043816_create_account_transactions/: down.sql  up.sql
src/: albatross.rs  main.rs  schema.rs  utils.rs
src/resource/: account.rs  block.rs  blockchain.rs  dashboard.rs  error.rs  genesis.rs  metadata.rs  mod.rs  renderer.rs  search.rs  transaction.rs
src/resources/: block.rs  dashboard.rs  error.rs  genesis.rs  mod.rs  transaction.rs
static/css/: custom.css
templates/: account.html.hbs  accounts.html.hbs  base.html.hbs  block.html.hbs  blockchain.html.hbs  dashboard.html.hbs  error.html.hbs  genesis.html.hbs  transaction.html.hbs
