[package]
name = "albatross-explorer"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nimiq-lib = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
nimiq-network-primitives = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
nimiq-primitives = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
nimiq-database = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
nimiq-consensus = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
nimiq-utils = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
nimiq-hash = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
nimiq-block-albatross = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
nimiq-blockchain-albatross = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
nimiq-network = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
nimiq-bls = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
nimiq-transaction = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
nimiq-keys = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
beserial = { git = "https://github.com/nimiq/core-rs.git", branch = "janosch/albatross-explorer" }
tokio = "0.1"
futures = "0.1"
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
lazy_static = "1.4"
rocket = "0.4"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1"
hex = "0.4"
chrono = "0.4"
simple_logger = "1.3"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "serve"]